# ntnu-polar-sim

./: .gitignore  README.md
development/assets/debug/: style.css  template.html
development/assets/shaders/basic/: fragment.glsl  vertex.glsl
include/: assets.hpp  psim.hpp
project/: CMakeLists.txt  VisualStudio15_x64.bat
source/: assets.cpp  main.cpp  psim.cpp
